--- a/templates/index.html
+++ b/templates/index.html
@@ -73,64 +73,64 @@
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">Version</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/v/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/v/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/v/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/v/html2text.svg">
                             </span>
                         </div>
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">Downloads</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/d/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/d/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/d/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/d/html2text.svg">
                             </span>
                         </div>
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">Wheel</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/w/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/w/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/w/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/w/html2text.svg">
                             </span>
                         </div>
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">License</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/l/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/l/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/l/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/l/html2text.svg">
                             </span>
                         </div>
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">Format</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/f/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/f/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/f/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/f/html2text.svg">
                             </span>
                         </div>
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">Python Versions</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/f/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/f/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/py_versions/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/py_versions/html2text.svg">
                             </span>
                         </div>
                         <div class="panel panel-default panel-body">
                             <p class="col-xs-2">Status</p>
                             <span class="col-xs-8">
-                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/s/html2text/badge.svg">
+                                <input onclick="this.select()" class="form-control badge-url" readonly="" value="http://badge.kloud51.com/pypi/s/html2text.svg">
                             </span>
                             <span class="col-xs-2">
-                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/s/html2text/badge.svg">
+                                <img class="pull-right badge-image" src="http://badge.kloud51.com/pypi/s/html2text.svg">
                             </span>
                         </div>
                     </div>
