--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 
         <title>Badge - Badges for your site to display download totals, latest version using and much more <3</title>
 
-        <link rel="icon"       href="/static/img/favicon.png">
-        <link rel="stylesheet" href="/static/css/bootstrap.css">
-        <link rel="stylesheet" href="/static/css/app.css">
+        <link rel="icon"       href="/bits/static/img/favicon.png">
+        <link rel="stylesheet" href="/bits/static/css/bootstrap.css">
+        <link rel="stylesheet" href="/bits/static/css/app.css">
 
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -30,7 +30,7 @@
                     </button>
 
                     <a class="navbar-brand" href=" ">
-                        <img alt="Badge" src="/static/img/favicon.png"> Badge <small>by Kloud51</small>
+                        <img alt="Badge" src="/bits/static/img/favicon.png"> Badge <small>by Kloud51</small>
                     </a>
                 </div>
             </div>
@@ -171,8 +171,8 @@
 
         </div>
 
-        <script src="/static/js/jquery.js"></script>
-        <script src="/static/js/bootstrap.js"></script>
-        <script src="/static/js/app.js"></script>
+        <script src="/bits/static/js/jquery.js"></script>
+        <script src="/bits/static/js/bootstrap.js"></script>
+        <script src="/bits/static/js/app.js"></script>
     </body>
 </html>
